--- a/generator/templates/twig/Type.php.twig
+++ b/generator/templates/twig/Type.php.twig
@@ -9,6 +9,14 @@ namespace Spatie\SchemaOrg;
  */
 class {{ type.name }} extends {{ type.parent }}
 {
+{% for constant in type.constants %}    /**
+     * {{ constant.description | doc(1) }}
+     *
+     * @see {{ constant.value }}
+     */
+     const {{ constant.name }} = '{{ constant.value }}';
+
+{% endfor %}
 {% for property in type.properties %}    /**
      * {{ property.description | doc(1) }}
      *
