type class extending the parent type class instead of BaseType class

--- a/generator/templates/twig/Type.php.twig
+++ b/generator/templates/twig/Type.php.twig
@@ -16,7 +16,7 @@ namespace Spatie\SchemaOrg;
 {% endfor %}
 {% endif %}
  */
-class {{ type.name }} extends BaseType
+class {{ type.name }} extends {% if type.parents %}{{ type.parents|first }}{% else %}BaseType{% endif %} 
 {
 {% for constant in type.constants %}
     /**
