replace mixin annotation by all methods with proper argument definitions

--- a/generator/templates/twig/Graph.php.twig
+++ b/generator/templates/twig/Graph.php.twig
@@ -13,7 +13,9 @@ use Spatie\SchemaOrg\Exceptions\TypeAlreadyInGraph;
 use Spatie\SchemaOrg\Exceptions\TypeNotInGraph;
 
 /**
- * @mixin \Spatie\SchemaOrg\Schema
+{% for type in types %}
+ * @method self|{{ type.name }} {{ type.name | lcfirst }}(string|Closure|null $identifier = null, Closure $callback = null)
+{% endfor %}
  */
 class Graph implements Type, ArrayAccess, JsonSerializable
 {
