--- a/generator/templates/twig/Contract.php.twig
+++ b/generator/templates/twig/Contract.php.twig
@@ -2,7 +2,7 @@
 
 namespace Spatie\SchemaOrg\Contracts;
 
-interface {{ type.name }}Contract
+interface {{ type.className }}Contract
 {
 {% for property in type.properties if not property.pending  %}
     public function {{ property.name }}(${{ property.name }});
