--- a/generator/templates/twig/Type.php.twig
+++ b/generator/templates/twig/Type.php.twig
@@ -2,7 +2,7 @@
 
 namespace Spatie\SchemaOrg;
 
-use \Spatie\SchemaOrg\Contracts\{{ type.name }}Contract;
+use \Spatie\SchemaOrg\Contracts\{{ type.className }}Contract;
 {% for parent in type.parents %}
 use \Spatie\SchemaOrg\Contracts\{{ parent }}Contract;
 {% endfor %}
@@ -16,7 +16,7 @@ use \Spatie\SchemaOrg\Contracts\{{ parent }}Contract;
  * @method static {{ property.name }}(${{ property.name }}) The value should be instance of pending types {{ property.ranges | join('|') }}
 {% endfor %}
  */
-class {{ type.name }} extends BaseType implements {{ type.name }}Contract{% if type.parents %}, {% endif %}{{ type.parents|map(parent => "#{parent}Contract")|join(', ') }}
+class {{ type.className }} extends BaseType implements {{ type.className }}Contract{% if type.parents %}, {% endif %}{{ type.parents|map(parent => "#{parent}Contract")|join(', ') }}
 {
 {% for constant in type.constants %}
     /**
@@ -27,6 +27,13 @@ class {{ type.name }} extends BaseType implements {{ type.name }}Contract{% if t
      const {{ constant.name }} = '{{ constant.value }}';
 
 {% endfor %}
+{% if type.name != type.className %}
+    public function getType(): string
+    {
+        return '{{ type.name }}';
+    }
+
+{% endif %}
 {% for property in type.properties if not property.pending  %}
     /**
      * {{ property.description | doc(1) }}
