--- a/generator/templates/twig/Contract.php.twig
+++ b/generator/templates/twig/Contract.php.twig
@@ -4,8 +4,10 @@ namespace Spatie\SchemaOrg\Contracts;
 
 interface {{ type.className }}Contract
 {
-{% for property in type.properties if not property.pending  %}
+{% for property in type.properties %}
+{% if not property.pending  %}
     public function {{ property.name }}(${{ property.name }});
 
+{% endif %}
 {% endfor %}
 }
