--- a/generator/templates/twig/MultiTypedEntity.php.twig
+++ b/generator/templates/twig/MultiTypedEntity.php.twig
@@ -167,7 +167,8 @@ class MultiTypedEntity implements Type, JsonSerializable
         return '<script type="application/ld+json">'.json_encode($this, JSON_UNESCAPED_UNICODE).'</script>';
     }
 
-    public function jsonSerialize(): mixed
+    #[\ReturnTypeWillChange]
+    public function jsonSerialize()
     {
         return $this->toArray();
     }
