add support for complex context fixes #185

--- a/generator/templates/twig/Graph.php.twig
+++ b/generator/templates/twig/Graph.php.twig
@@ -30,7 +30,7 @@ class Graph implements Type, ArrayAccess, JsonSerializable
     /** @var string|null */
     protected $context;
 
-    public function __construct(?string $context = null)
+    public function __construct(string|array|null $context = null)
     {
         $this->context = $context;
     }
@@ -176,7 +176,7 @@ class Graph implements Type, ArrayAccess, JsonSerializable
     {
         // show all
         if ($identifier === null) {
-            $this->hidden[$type] = false;
+            unset($this->hidden[$type]);
 
             return $this;
         }
@@ -270,7 +270,7 @@ class Graph implements Type, ArrayAccess, JsonSerializable
         return $this->nodes;
     }
 
-    public function getContext(): string
+    public function getContext(): string|array
     {
         return $this->context ?? 'https://schema.org';
     }
